# RADAGAST

./: .clang-format  .gitignore  CMakeLists.txt  CompilerFlags.cmake  LevelSolver.cpp  Makefile  README.md  README.txt  benchmark.py  build.sh  build_cmake_debug.sh  build_cmake_release.sh  makeTest.sh  make_release.sh  plot_benchmark_output.py
.github/workflows/: cmake.yml
benchmark/cloudy/: compact_fullH2_template  compact_th85H2_template  fullH2_template  th85H2_template
benchmark/cloudy/thin-shell-mrn/: current_state.txt  hsphere.in  plot_cloudy_output.py  runCutCopy.sh
benchmark/cloudy/thin-shell-mrn-template/: hsphere.in
benchmark/tools/: many_plots_example_command.sh  overview_benchmark_output.py  plot_benchmark_output.py  read_benchmark_output.py  setup_benchmarks.py
comparison/cloudy/thin-shell-mrn/: hsphere.in  plot_cloudy_output.py
comparison/cloudy/thin-shell-mrn-template/: hsphere.in
dat/: t3_elec_reformat.ascii
dat/CHIANTI_8.0.6_data/h/h_1/: h_1.diparams  h_1.elvlc  h_1.fblvl  h_1.scups  h_1.wgfa
dat/h2/: crossections_leiden.txt  fit_h2_cross.py
doc/: doxygen.conf  stylesheet.css
dox/: build.md  build_page.dox  build_page.txt  doxygen.conf  example_page.dox  example_page.txt  mainpage.dox  mainpage.txt  use.md
include/: Array.hpp  Constants.h  Constants.hpp  NumUtils.h  SpecialFunctions.h  Table.h  Table.hpp  TableImpl.h
src/: CarbonaceousGrain.cpp  CarbonaceousGrain.h  ChemicalNetwork.cpp  ChemicalNetwork.h  Chemistry.cpp  Chemistry.h  ChemistrySolver.cpp  ChemistrySolver.h  CollisionData.cpp  CollisionData.h  CustomGrain.h  DebugMacros.h  EigenAliases.h  Error.h  FreeBound.cpp  FreeBound.h  FreeFree.cpp  FreeFree.h  FrequencyGrids.h  GasGrainInteraction.cpp  GasGrainInteraction.h  GasInterface.cpp  GasInterface.h  GasInterfaceImpl.cpp  GasInterfaceImpl.h  GasSpecies.cpp  GasSpecies.h  GasState.cpp  GasState.h  GasStruct.h  GrainInfo.cpp  GrainInfo.h  GrainInterface.cpp  GrainInterface.h  GrainPhotoelectricEffect.cpp  GrainPhotoelectricEffect.h  GrainProperties.cpp  GrainProperties.h  GrainSpecies.cpp  GrainSpecies.h  (+60 more)
src/core/: BigH2Model.cpp  BigH2Model.hpp  CMakeLists.txt  CarbonaceousGrain.cpp  CarbonaceousGrain.h  CarbonaceousGrain.hpp  ChargeDistribution.cpp  ChargeDistribution.h  ChargeDistribution.hpp  ChemicalNetwork.cpp  ChemicalNetwork.h  ChemicalNetwork.hpp  Chemistry.cpp  Chemistry.hpp  ChemistrySolver.cpp  ChemistrySolver.h  ChemistrySolver.hpp  CollisionData.cpp  CollisionData.h  CollisionData.hpp  CollisionParameters.hpp  CustomGrain.cpp  CustomGrain.h  DebugMacros.h  DebugMacros.hpp  DoctestUtils.h  DoctestUtils.hpp  EigenAliases.h  EigenAliases.hpp  Error.h  Error.hpp  FreeBound.cpp  FreeBound.hpp  FreeFree.cpp  FreeFree.h  FreeFree.hpp  Functions.cpp  Functions.hpp  GasDiagnostics.cpp  GasDiagnostics.h  (+157 more)
src/mains/: CMakeLists.txt  krome_compare.cpp  main.cpp  make_wavelengthgrid.cpp  test.cpp
test_main/: main.cpp
